# starforge-narrative-tools

./: .gitignore  DESIGN_DECISIONS.md  NEXT_STEPS.md  README.md  REFERENCES.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
docs/: cleanup-policy.md  deterministic-orchestration.md  portfolio-cluster.md  portfolio-grade.md
prose/act1/: 00_prologue_floors_not_thrones.md  01_cinder_hours.md  02_the_debt_clock.md  03_the_thing_in_the_rock.md  04_contract_glitter_vein.md  05_flicker_day.md  06_minebreak.md  07_exit_writ.md  08_the_girl_with_the_shard.md  09_a_name_given_not_owned.md  09a_medical_autonomy.md  09b_rowan_finds_vesper.md  10_first_watch.md  10a_personal_property.md  10b_roster_roles_and_refusal.md  11_shard_whispers.md  11a_id_names_forms.md  11b_senna_small_good_thing.md  12_the_doctrine.md  12a_crew_meal_dynamics.md  12b_ai_game_night_probability.md  13_shipboard_physics.md  13a_starmap_hobby.md  13b_coffee_ritual.md  13c_asking_for_what_you_need.md  13d_choosing_rest.md  13e_water_is_not_a_test.md  13f_avyanna_yes_reflex.md  13g_rho_kenna_coffee.md  14_dumb_reliability.md  14a_first_contract_debrief.md  14b_small_success_contract.md  14c_bridge_transit_ritual.md  14d_orin_teaches_bearing.md  15_ghost_net_lesson.md  15a_guild_station_protocols.md  15b_first_purchase_decision.md  15d_rival_crew_probe.md  (+28 more)
spec/: README.md  act1_public_scope.md
tests/: test_corpus_integrity.py  test_tooling_compiles.py
tools/: check_release.py  convert_combat.py  convert_dialogue.py  convert_prose.py  demo.py  validate_public_scope.py
