[project]
name = "starforge-narrative-tools"
version = "0.1.0"
description = "Full-corpus narrative conversion and validation tooling for Starforge."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vignesh Gopalakrishnan" }]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
